--- a/Angular/Day1/Assignments/emp.component.html
+++ b/Angular/Day1/Assignments/emp.component.html
@@ -1,3 +1,5 @@
+<div> <img [src] ="ImagePath" 
+    style="width: 300px;height: 200px;"></div>
 <table border=1>
     <caption>Employee Details</caption>
     <tr>
