--- a/Angular/Day4/Assignments/Task2/app.component.html
+++ b/Angular/Day4/Assignments/Task2/app.component.html
@@ -1,7 +1,22 @@
 <div><h1>Application development</h1></div>
+<!-- <app-emp> </app-emp>
 <hr>
 
+<app-friends></app-friends>
+
+<hr>
+<app-products></app-products> -->
+
+<hr>
+<!-- <app-emp-list></app-emp-list> -->
 <app-fancy-card>
     <h2>Calling from App component to Fancy Card</h2>
 </app-fancy-card>
 <hr>
+<!-- <br>
+<app-employee-grades></app-employee-grades> -->
+<!-- <app-product-list [category]="prodCat"></app-product-list> -->
+<!-- <app-calculate-amt></app-calculate-amt> -->
+<!-- <app-sort-options (onSorting)="SendSortdata($event)"></app-sort-options>
+<br>
+<app-emp-list [sortoption]="sortopt"></app-emp-list> -->
