--- a/Angular/Day4/Assignments/Task2/directive-demo.component.html
+++ b/Angular/Day4/Assignments/Task2/directive-demo.component.html
@@ -103,6 +103,7 @@ background-color: #f1f1f1;
   }
 </style>
 <ng-content></ng-content>
+<app-fancy-child>
 <h3>Working with directives in Angular -- Multiple display models</h3>
 <hr/>
 Select Display Mode :
@@ -177,3 +178,5 @@ Select Display Mode :
      </div>
     </article>
 </section>
+
+</app-fancy-child>
